--- a/PD_detection.ipynb
+++ b/PD_detection.ipynb
@@ -721,7 +721,7 @@
         "plt.xlabel(\"Time (s)\")\n",
         "plt.ylabel(\"Signal amplitude\")\n",
         "plt.legend(ncol=4) # Add ncol for better legend display\n",
-        "plt.xlim(0, 3000) # Keep x-axis limit to the first 10 seconds\n",
+        "plt.xlim(0, 3000) # 30 seconds\n",
         "plt.show()\n"
       ]
     },
@@ -735,7 +735,7 @@
         "plt.xlabel(\"Time (s)\")\n",
         "plt.ylabel(\"Signal amplitude\")\n",
         "plt.legend(ncol=4) # Add ncol for better legend display\n",
-        "plt.xlim(0, 3000) # Keep x-axis limit to the first 10 seconds\n",
+        "plt.xlim(0, 3000) # 30 seconds\n",
         "plt.show()"
       ],
       "metadata": {
@@ -2400,23 +2400,6 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "9e690b76"
-      },
-      "source": [
-        "# Select all rows and the first 4 columns (as only 4 exist)\n",
-        "sliced_dataset = dataset.iloc[:, :4]\n",
-        "\n",
-        "print(\"Sliced DataFrame (first 4 columns and all rows):\")\n",
-        "display(sliced_dataset.head())\n",
-        "\n",
-        "print(\"\\nAvailable columns in 'dataset' are:\", dataset.columns.tolist())\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -3362,7 +3345,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 998
+          "height": 1000
         },
         "id": "TPSFE-0mykYt",
         "outputId": "928b6ac6-99e6-4f85-ddeb-5ea72c3e9c35"
@@ -3429,7 +3412,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7poRuDM8o2Obe0Q23fP77",
+      "authorship_tag": "ABX9TyP3RoA7R5fZhHXZkMo0O1Fv",
       "include_colab_link": true
     },
     "kernelspec": {
